# SirioC

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  AUTHORS  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Makefile  README  README.md  TASKS_CHECKLIST.md  licence  nn-1c0000000000.nnue  nn-37f18f62d772.nnue
.github/workflows/: ci.yml  sirioC.yml
bench/: bench.cpp  berserk_suite.json  ccrl_openings.pgn  ccrl_suite.py  latest_bench.json  obsidian_suite.json  run_benchmarks.py  stockfish_suite.json
cmake/: EmbedNNUE.cmake
device/: Makefile
device/src/: bitboard.h  main.cpp  movepick.cpp  movepick.h  uci.cpp
docs/: benchmark_report.md  ccrl_reproduction.md  communication.md  engine_comparison.md  evaluation.md  external_engine_module_integration.md  fen.md  gui.md  hash.md  moving_pieces.md  review_checklists.md  search.md  uci_options.md  upstream_module_viability.md
docs/analysis/: fritz20_bala_oct29.md  long_run_operations.md
docs/sirioc_reckless_migration/: P0_BASELINE_CONTROL_GATE.md  P0_CAPTURE_NOISY_RUNTIME_UPDATE_AUDIT.md  P0_EVALUATION_TRACK_READINESS_GATE.md  P0_HELPER_CONTRACT_FAILURE_REGISTER.md  P0_LEGACY_NNUE_DEPRECATION_MAP.md  P0_MOVE_PICKER_BASELINE_AUDIT.md  P0_MOVE_PICKER_HISTORY_INTEGRATION_DECISION.md  P0_NNUE2_FOUNDATION_LOG.md  P0_RUNTIME_NNUE_ALIAS_AUDIT.md  P0_SEARCH_REENTRY_BASELINE.md  P0_SEARCH_REFACTOR_LOG.md  PROVENANCE_POLICY.md
include/engine/: config.hpp  types.hpp
include/engine/bench/: bench.hpp
include/engine/core/: board.hpp  fen.hpp  perft.hpp
include/engine/eval/: eval.hpp  see.hpp
include/engine/search/: search.hpp  see.hpp
include/engine/syzygy/: syzygy.hpp
include/engine/uci/: options.hpp  uci.hpp
include/engine/util/: bitops.hpp  log.hpp  nodes.hpp  time.hpp
include/sirio/: bitboard.hpp  board.hpp  draws.hpp  endgame.hpp  evaluation.hpp  evaluation_route.hpp  history.hpp  move.hpp  movegen.hpp  opening_book.hpp  search.hpp  search_params.hpp  syzygy.hpp  time_manager.hpp  transposition_table.hpp  uci.hpp  uci_options.hpp
include/sirio/nnue/: api.hpp  backend.hpp  features.hpp
resources/: bench.fens  sample.pgn  update.sh
resources/tablebases/: basic.csv
scripts/: download_nnue.py  download_nnue.sh  get_native_properties.sh  net.sh
src/: .gitkeep  Makefile  SirioC.c  SirioC.h  bench.c  bench.cpp  bench.h  benchmark.cpp  benchmark.h  berserk.c  berserk.h  bitboard.cpp  bitboard.h  bitboard_tables.cpp  bits.c  bits.h  board.c  board.cpp  board.h  cpu_features.cpp  cpu_features.h  draws.cpp  endgame.cpp  engine.cpp  engine.h  eval.c  eval.h  evaluate.cpp  evaluate.h  evaluation.cpp  evaluation_route.cpp  history.c  history.cpp  history.h  incbin.h  main.cpp  makefile  memory.cpp  memory.h  misc.cpp  (+53 more)
src/core/: board.cpp  fen.cpp  movegen.cpp  perft.cpp
src/engine/: work_queue_watchdog.cpp  work_queue_watchdog.hpp
src/engine/core/: attacks.c  attacks.h  board.c  board.h  move.c  movepick.c  movepick.h
src/engine/nn/: accumulator.c  evaluate.c  nnue.cpp  nnue_loader.cpp  nnue_loader.h  nnue_paths.c  nnue_paths.h
src/engine/search/: perft.c  perft.h  thread.c  transposition.c
src/engine/uci/: uci.h
src/engine/util/: path.h  util.h
src/eval/: eval.cpp  see.cpp
src/eval/nnue/: Accumulator.cpp  Accumulator.h  HalfKP.cpp  HalfKP.h  Loader.cpp  Loader.h  Network.cpp  Network.h  accumulator.cpp  evaluator.cpp  nnue.cpp
src/fathom/: README.md
src/files/: fen.cpp  fen.h  pgn_loader.cpp  pgn_loader.h
src/nn/: accumulator.c  accumulator.h  evaluate.c  evaluate.h  evaluator.cpp  evaluator.h  nnue.cpp  nnue.h  nnue_loader.cpp  nnue_loader.h
src/nnue/: api.cpp  backend.cpp  features.cpp  network.cpp  network.h  nnue_accumulator.cpp  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h  nnue_misc.cpp  nnue_misc.h
src/nnue/features/: half_ka_v2_hm.cpp  half_ka_v2_hm.h
src/nnue/layers/: affine_transform.h  affine_transform_sparse_input.h  clipped_relu.h  simd.h  sqr_clipped_relu.h
src/pyrrhic/: LICENSE  bench.cpp  bench.hpp  board.cpp  board.h  engine.cpp  engine.h  main.cpp  path.cpp  path.hpp  stdendian.h  tbchess.c  tbconfig.h  tbprobe.c  tbprobe.h  types.cpp  types.h
src/search/: search.cpp  search.hpp
src/syzygy/: syzygy.cpp  syzygy.hpp  tbprobe.cpp  tbprobe.h
src/uci/: Options.cpp  Options.h  Uci.cpp  Uci.h  options.cpp  uci.cpp
src/util/: log.cpp  path.cpp  time.cpp
test/: engine_tests.cpp  mate-in-1.sh  perft.sh
tests/: board_fen_tests.cpp  board_tests.cpp  eval_tests.cpp  evaluation_cpp_shadow_wrapper_v2_tests.cpp  evaluation_initialization_shadow_v2_tests.cpp  evaluation_internal_selector_v2_tests.cpp  evaluation_route_harness_tests.cpp  evaluation_shadow_integration_v2_tests.cpp  evaluation_tests.cpp  history_tests.cpp  instrumented.py  internal_eval_backend_selector_v2_tests.cpp  legal_moves_cli.cpp  move_picker_snapshot_tests.cpp  movegen_tests.cpp  nnue_accumulator_delta_v2_tests.cpp  nnue_accumulator_transition_v2_tests.cpp  nnue_api_build_info_v2_tests.cpp  nnue_backend_tests.cpp  nnue_board_shadow_v2_tests.cpp  nnue_candidate_v2_artifact_test.py  nnue_candidate_v2_verify_test.py  nnue_candidate_verified_runtime_load_test.py  nnue_dataset_v2_test.py  nnue_eval_probe_v2_tests.cpp  nnue_eval_test.cpp  nnue_evaluation_shadow_hook_v2_tests.cpp  nnue_experimental_runtime_v2_tests.cpp  nnue_export_v2_test.py  nnue_feature_diff_v2_tests.cpp  nnue_feature_dump.cpp  nnue_feature_parity_test.py  nnue_features_tests.cpp  nnue_format_detect_contract.cpp  nnue_format_detection_v2_tests.cpp  nnue_golden_path_v2_smoke_test.py  nnue_inference_v2_tests.cpp  nnue_internal_activation_candidate_v2_test.py  nnue_roundtrip_tests.cpp  nnue_runtime_smoke_contract.cpp  (+17 more)
tests/data/: minimal.nnue
tools/: diagnose.bat  kpi_logger.py
training/: __init__.py
training/nnue/: README.md  __init__.py  requirements.txt
training/nnue/configs/: default.yaml  sirio_nnue2_candidate_minimal.yaml  sirio_nnue2_minimal.yaml
training/nnue/datasets/: README.md
training/nnue/metrics/: baseline.json
training/nnue/scripts/: __init__.py  build_candidate_v2.py  train.py  (+13 more)
(+5 files in other folders)
